--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                 <p align="center"> <font color="green" size="3" face="Arial"> Data urodzenia: 10 października 2002.  </font> </p> <br>
                 <p align="left"> <font color="black" size="3" face="Arial"> <b> H₂SO₄ </b> </font> </p> <br>
                 <p align="left"> <font color="black" size="2" face="Arial"> <b> x*x=x² </b>  </font> </p> <br>
+<A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
+<A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
+<a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
+<a href="#skok_środek"> kliknij aby skoczyć na środek tekstu </a><br>
+<A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
+<A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
+<a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>
                 
                 <p><b> <font size="6" face="Arial"> Żart o informatyku </font> </b></p><br>
 
@@ -113,7 +120,13 @@ Młody górnik umówił się z dziewczyną na randkę w parku. W pewnej chwili m
 <LI> Zapobieganie automatycznemu przenoszeniu fragmentu tekstu do nowego wiersza:
 <LI> Spacja niełamliwa:
 </UL>
-
+<A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
+<A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
+<a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
+<a href="#skok_środek"> kliknij aby skoczyć na środek tekstu </a><br>
+<A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
+<A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
+<a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>
 
 
 
