Change body background color to light coral

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  	            	<meta charset="utf-8"> 
   	           	<title>Michał Rzymowski</title> 
   	   	</head> 
-  	  	<body> 
+  	  	<body bgcolor=#CD5C5C> 
  		 <b> Rzymowski </b>
 
 
