Update table headers for processor data

--- a/tabela_rzymowski.html
+++ b/tabela_rzymowski.html
@@ -20,7 +20,7 @@
    <caption>Tytuł tabela HTML</caption> 
    <thead> 
        <tr> 
-         <p> <th>Dane Procesorów - Michał Rzymowski 2F G2</th> </p>
+         <p> <th colspan="5">Dane Procesorów - Michał Rzymowski 2F G2</th> </p>
       </tr>
       <tr> 
          <th>Model procesora</th> 
@@ -67,18 +67,10 @@
          <td>64 MB</td> 
       </tr>
       <tr> 
-        <br> <p> <th>Dane Procesorów</th> </p> </br>
+        <br> <p>  <th colspan="5">Dane Procesorów </th> </p> </br>
       </tr>
 
    </tbody> 
 </table> 
 </body> 
-</html>
-
-
-
-
-
-
-
 </html>
