--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	  	<body bgcolor=#CD5C5C> 
  		 <b> Rzymowski </b>
 
-
+<a name="skok_poczatek"></a>
 <A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
 <A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
 <a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
@@ -41,7 +41,7 @@
                 <p align="center"> <font color="black" size="4" face="Arial"> Ulubiony zespół muzyczny:Sobel i Oki </font> </p> <br>
                 <p align="center"> <font color="green" size="3" face="Arial"> Data urodzenia: 10 października 2002.  </font> </p> <br>
                 <p align="left"> <font color="black" size="3" face="Arial"> <b> H₂SO₄ </b> </font> </p> <br>
-                <p align="left"> <font color="black" size="2" face="Arial"> <b> x*x=x² </b>  </font> </p> <br>
+<a name="skok_środek"></a>                <p align="left"> <font color="black" size="2" face="Arial"> <b> x*x=x² </b>  </font> </p> <br>
 <A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
 <A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
 <a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
@@ -127,7 +127,7 @@ Młody górnik umówił się z dziewczyną na randkę w parku. W pewnej chwili m
 <A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
 <A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
 <a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>
-
+<a name="skok_koniec"></a>
 
 
 
