Fix anchor names for navigation links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
 <A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
 <a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
-<a href="#skok_środek"> kliknij aby skoczyć na środek tekstu </a><br>
+<a href="#skok_srodek"> kliknij aby skoczyć na środek tekstu </a><br>
 <A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
 <A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
 <a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>		
@@ -41,11 +41,11 @@
                 <p align="center"> <font color="black" size="4" face="Arial"> Ulubiony zespół muzyczny:Sobel i Oki </font> </p> <br>
                 <p align="center"> <font color="green" size="3" face="Arial"> Data urodzenia: 10 października 2002.  </font> </p> <br>
                 <p align="left"> <font color="black" size="3" face="Arial"> <b> H₂SO₄ </b> </font> </p> <br>
-<a name="skok_środek"></a>                <p align="left"> <font color="black" size="2" face="Arial"> <b> x*x=x² </b>  </font> </p> <br>
+<a name="skok_srodek"></a>                <p align="left"> <font color="black" size="2" face="Arial"> <b> x*x=x² </b>  </font> </p> <br>
 <A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
 <A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
 <a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
-<a href="#skok_środek"> kliknij aby skoczyć na środek tekstu </a><br>
+<a href="#skok_srodek"> kliknij aby skoczyć na środek tekstu </a><br>
 <A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
 <A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
 <a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>
@@ -123,7 +123,7 @@ Młody górnik umówił się z dziewczyną na randkę w parku. W pewnej chwili m
 <A HREF="poczta_rzymowski.html"> Tutaj jest link do poczty </A> <br>
 <A HREF="plik_rzymowski.html"> Tutaj jest link do pliku </A> <br>
 <a href="#skok_poczatek"> kliknij aby skoczyć na początek tekstu </a><br>
-<a href="#skok_środek"> kliknij aby skoczyć na środek tekstu </a><br>
+<a href="#skok_srodek"> kliknij aby skoczyć na środek tekstu </a><br>
 <A HREF="tabela_rzymowski.html"> Tutaj będzie tabela </A> <br>
 <A HREF="formularz_rzymowski.html"> Tutaj będzie formularz </A><br> 
 <a href="#skok_koniec"> kliknij aby skoczyć na koniec tekstu </a><br>
