--- a/poczta_rzymowski.html
+++ b/poczta_rzymowski.html
@@ -8,8 +8,8 @@
  <body> 
  tutaj będzie link do poczty <br>
 <A HREF="index.html"> link do poczty </A>
-<a href ="rzymek21@gmail.com"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3FqejZqeGcyam5yeDZ2Zm9mcHFkdG1kZ3EyYnk5eGlhazNiZzQzNiZlcD12MV9naWZzX3RyZW5kaW5nJmN0PWc/QBd2kLB5qDmysEXre9/giphy.gif" border=0 width=70 height=50>poczta 
+<a href ="mailto:rzymek21@gmail.com"><img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExd3FqejZqeGcyam5yeDZ2Zm9mcHFkdG1kZ3EyYnk5eGlhazNiZzQzNiZlcD12MV9naWZzX3RyZW5kaW5nJmN0PWc/QBd2kLB5qDmysEXre9/giphy.gif" border=0 width=70 height=50>poczta 
 do mnie</A>
-<a href="rzymek21@gmail.com">  
+<a href="mailto:rzymek21@gmail.com">  
  </body> 
 </html>
