--- a/poczta_rzymowski.html
+++ b/poczta_rzymowski.html
@@ -3,7 +3,7 @@
   <html> 
    <head> 
     <meta charset="utf-8"> 
-     <title>  tabela_rzymowski     </title> 
+     <title>  poczta_rzymowski     </title> 
      </head> 
  <body> 
  tutaj będzie link do poczty <br>
