--- a/plik_rzymowski.html
+++ b/plik_rzymowski.html
@@ -3,7 +3,7 @@
   <html> 
    <head> 
     <meta charset="utf-8"> 
-     <title>  tabela_rzymowski     </title> 
+     <title>  plik_rzymowski     </title> 
      </head> 
  <body> 
  tutaj będzie link do pliku <br>
