--- a/plik_rzymowski.html
+++ b/plik_rzymowski.html
@@ -7,6 +7,8 @@
      </head> 
  <body> 
  tutaj będzie link do pliku <br>
+   <A href ="instrukcja.zip">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A><br>
+
 <A HREF="index.html"> link do pliku  </A>  
  </body> 
 </html>
