--- a/formularz_rzymowski.html
+++ b/formularz_rzymowski.html
@@ -3,7 +3,7 @@
   <html> 
    <head> 
     <meta charset="utf-8"> 
-     <title>  tabela_rzymowski     </title> 
+     <title>  formularz_rzymowski     </title> 
      </head> 
  <body> 
  tutaj będzie formularz <br>
